docs/4.20/virt/managing_vms/virt-accessing-vm-consoles.md
You can connect to the following consoles to access running virtual machines (VMs):

- [VNC console](../../virt/managing_vms/virt-accessing-vm-consoles.xml#vnc-console_virt-accessing-vm-consoles)

- [Serial console](../../virt/managing_vms/virt-accessing-vm-consoles.xml#serial-console_virt-accessing-vm-consoles)

- [Desktop viewer for Windows VMs](../../virt/managing_vms/virt-accessing-vm-consoles.xml#desktop-viewer_virt-accessing-vm-consoles)

# Considerations for accessing VM consoles

In the OpenShift Virtualization environment, you can access guest VMs without the need for a guest network by using the OpenShift Container Platform web console or by using `virtctl` commands from the command-line interface (CLI).

> [!NOTE]
> Connecting to a guest VM through the VNC or serial console does not provide a full set of access features and cannot replace the Virtual Desktop Infrastructure (VDI) access. However, these consoles are useful for troubleshooting, as they allow access even if the guest VM has no network.

- **Connecting to VMs using the VNC console**

  You can connect to the VNC console of a VM by using the OpenShift Container Platform web console, as documented in the first two steps in [Connecting to the VNC console by using the web console](../../virt/managing_vms/virt-accessing-vm-consoles.xml#vnc-console_virt-accessing-vm-consoles).

  Alternatively, you can use the `virtctl` command-line tool to connect to the VNC console of a running VM. The installation of the `virtctl` command line tool is documented in [Installing virtctl](../../virt/getting_started/virt-using-the-cli-tools.xml#installing-virtctl_virt-using-the-cli-tools), and the usage is documented in [Connecting to the VNC console by using virtctl](../../virt/managing_vms/virt-accessing-vm-consoles.xml#vnc-console_virt-accessing-vm-consoles).

  Take into account the following considerations:

  - Using the VNC console is recommended for troubleshooting VMs.

  - Using the VNC console is not recommended for high-traffic applications, such as Virtual Desktop Infrastructure (VDI), because of the burden on the API server.

  - The API server must be able to handle the traffic load.

  - The clients must be able to access the API server.

  - The clients must have access credentials for the cluster.

  - The VNC connection is expected to disconnect during live migration of a VM to another node.

  - Using the VNC console allows only a single connection per VM at a time.

- **Connecting to VMs using the serial console**

  You can connect to the serial console of a virtual machine (VM) by using the OpenShift Container Platform web console, as documented in [Connecting to the serial console by using the web console](../../virt/managing_vms/virt-accessing-vm-consoles.xml#serial-console_virt-accessing-vm-consoles).

  Alternatively, you can use the `virtctl` command-line tool to connect to the serial console of a running virtual machine. The installation of the `virtctl` command line tool is documented in [Installing virtctl](../../virt/getting_started/virt-using-the-cli-tools.xml#installing-virtctl_virt-using-the-cli-tools), and the usage is documented in [Connecting to the serial console by using virtctl](../../virt/managing_vms/virt-accessing-vm-consoles.xml#serial-console_virt-accessing-vm-consoles).

  Take into account the following considerations:

  - The clients must be able to access the API server.

  - The clients must have access credentials for the cluster.

  - The API server must be able to handle the traffic load.

  - The serial connection is expected to disconnect during live migration of a VM to another node.

  - Using the serial console allows only a single connection per VM at a time.

# Connecting to the VNC console

You can connect to the VNC console of a virtual machine by using the OpenShift Container Platform web console or the `virtctl` command-line tool.

## Connecting to the VNC console by using the web console

You can connect to the VNC console of a virtual machine (VM) by using the OpenShift Container Platform web console.

> [!NOTE]
> If you connect to a Windows VM with a vGPU assigned as a mediated device, you can switch between the default display and the vGPU display.

<div>

<div class="title">

Procedure

</div>

1.  On the **Virtualization** → **VirtualMachines** page, click a VM to open the **VirtualMachine details** page.

2.  Click the **Console** tab. The VNC console session starts automatically.

3.  Optional: To switch to the vGPU display of a Windows VM, select **Ctl + Alt + 2** from the **Send key** list.

    - Select **Ctl + Alt + 1** from the **Send key** list to restore the default display.

4.  To end the console session, click outside the console pane and then click **Disconnect**.

</div>

## Connecting to the VNC console by using virtctl

You can use the `virtctl` command-line tool to connect to the VNC console of a running virtual machine.

> [!NOTE]
> If you run the `virtctl vnc` command on a remote machine over an SSH connection, you must forward the X session to your local machine by running the `ssh` command with the `-X` or `-Y` flags.

<div>

<div class="title">

Prerequisites

</div>

- You must install the `virt-viewer` package.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Run the following command to start the console session:

    \+

</div>

    $ virtctl vnc <vm_name>

1.  If the connection fails, run the following command to collect troubleshooting information:

    ``` terminal
    $ virtctl vnc <vm_name> -v 4
    ```

## Generating a temporary token for the VNC console

To access the VNC of a virtual machine (VM), generate a temporary authentication bearer token for the Kubernetes API.

> [!NOTE]
> Kubernetes also supports authentication using client certificates, instead of a bearer token, by modifying the curl command.

<div>

<div class="title">

Prerequisites

</div>

- A running VM with OpenShift Virtualization 4.14 or later and `ssp-operator` 4.14 or later.

- You have installed the OpenShift CLI (`oc`).

</div>

<div>

<div class="title">

Procedure

</div>

1.  Set the `deployVmConsoleProxy` field value in the HyperConverged (`HCO`) custom resource (CR) to `true`:

    ``` terminal
    $ oc patch hyperconverged kubevirt-hyperconverged -n openshift-cnv --type json -p '[{"op": "replace", "path": "/spec/deployVmConsoleProxy", "value": true}]'
    ```

2.  Generate a token by entering the following command:

    ``` terminal
    $ curl --header "Authorization: Bearer ${TOKEN}" \
         "https://api.<cluster_fqdn>/apis/token.kubevirt.io/v1alpha1/namespaces/<namespace>/virtualmachines/<vm_name>/vnc?duration=<duration>"
    ```

    The `<duration>` parameter can be set in hours and minutes, with a minimum duration of 10 minutes. For example: `5h30m`. If this parameter is not set, the token is valid for 10 minutes by default.

    Sample output:

    ``` terminal
    { "token": "eyJhb..." }
    ```

3.  Optional: Use the token provided in the output to create a variable:

    ``` terminal
    $ export VNC_TOKEN="<token>"
    ```

    You can now use the token to access the VNC console of a VM.

</div>

<div>

<div class="title">

Verification

</div>

1.  Log in to the cluster by entering the following command:

    ``` terminal
    $ oc login --token ${VNC_TOKEN}
    ```

2.  Test access to the VNC console of the VM by using the `virtctl` command:

    ``` terminal
    $ virtctl vnc <vm_name> -n <namespace>
    ```

</div>

> [!WARNING]
> It is currently not possible to revoke a specific token.
>
> To revoke a token, you must delete the service account that was used to create it. However, this also revokes all other tokens that were created by using the service account. Use the following command with caution:
>
> ``` terminal
> $ virtctl delete serviceaccount --namespace "<namespace>" "<vm_name>-vnc-access"
> ```

<div>

<div class="title">

Additional resources

</div>

- [About the Scheduling, Scale, and Performance (SSP) Operator](../../virt/about_virt/virt-architecture.xml#virt-about-ssp-operator_virt-architecture)

</div>

### Granting token generation permission for the VNC console by using the cluster role

As a cluster administrator, you can install a cluster role and bind it to a user or service account to allow access to the endpoint that generates tokens for the VNC console.

<div>

<div class="title">

Procedure

</div>

- Choose to bind the cluster role to either a user or service account.

  - Run the following command to bind the cluster role to a user:

    ``` terminal
    $ kubectl create rolebinding "${ROLE_BINDING_NAME}" --clusterrole="token.kubevirt.io:generate" --user="${USER_NAME}"
    ```

  - Run the following command to bind the cluster role to a service account:

    ``` terminal
    $ kubectl create rolebinding "${ROLE_BINDING_NAME}" --clusterrole="token.kubevirt.io:generate" --serviceaccount="${SERVICE_ACCOUNT_NAME}"
    ```

</div>

# Connecting to the serial console

You can connect to the serial console of a virtual machine by using the OpenShift Container Platform web console or the `virtctl` command-line tool.

> [!NOTE]
> Running concurrent VNC connections to a single virtual machine is not currently supported.

## Connecting to the serial console by using the web console

You can connect to the serial console of a virtual machine (VM) by using the OpenShift Container Platform web console.

> [!NOTE]
> If you connect to a Windows VM with a vGPU assigned as a mediated device, you can switch between the default display and the vGPU display.

<div>

<div class="title">

Procedure

</div>

1.  On the **Virtualization** → **VirtualMachines** page, click a VM to open the **VirtualMachine details** page.

2.  Click the **Console** tab. The VNC console session starts automatically.

3.  Click **Disconnect** to end the VNC console session. Otherwise, the VNC console session continues to run in the background.

4.  Select **Serial console** from the console list.

5.  Optional: To switch to the vGPU display of a Windows VM, select **Ctl + Alt + 2** from the **Send key** list.

    - Select **Ctl + Alt + 1** from the **Send key** list to restore the default display.

6.  To end the console session, click outside the console pane and then click **Disconnect**.

</div>

## Connecting to the serial console by using virtctl

You can use the `virtctl` command-line tool to connect to the serial console of a running virtual machine.

> [!NOTE]
> If you run the `virtctl vnc` command on a remote machine over an SSH connection, you must forward the X session to your local machine by running the `ssh` command with the `-X` or `-Y` flags.

<div>

<div class="title">

Prerequisites

</div>

- You must install the `virt-viewer` package.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Run the following command to start the console session:

    ``` terminal
    $ virtctl console <vm_name>
    ```

2.  Press `Ctrl+]` to end the console session.

    ``` terminal
    $ virtctl vnc <vm_name>
    ```

3.  If the connection fails, run the following command to collect troubleshooting information:

    ``` terminal
    $ virtctl vnc <vm_name> -v 4
    ```

</div>

# Connecting to the desktop viewer

You can connect to a Windows virtual machine (VM) by using the desktop viewer and the Remote Desktop Protocol (RDP).

## Connecting to the desktop viewer by using the web console

You can connect to the desktop viewer of a virtual machine (VM) by using the OpenShift Container Platform web console.

You can connect to the desktop viewer of a Windows virtual machine (VM) by using the OpenShift Container Platform web console.

> [!NOTE]
> If you connect to a Windows VM with a vGPU assigned as a mediated device, you can switch between the default display and the vGPU display.

<div>

<div class="title">

Prerequisites

</div>

- You installed the QEMU guest agent on the Windows VM.

- You have an RDP client installed.

</div>

<div>

<div class="title">

Procedure

</div>

1.  On the **Virtualization** → **VirtualMachines** page, click a VM to open the **VirtualMachine details** page.

2.  Click the **Console** tab. The VNC console session starts automatically.

3.  Click **Disconnect** to end the VNC console session. Otherwise, the VNC console session continues to run in the background.

4.  Select **Desktop viewer** from the console list.

5.  Click **Create RDP Service** to open the **RDP Service** dialog.

6.  Select **Expose RDP Service** and click **Save** to create a node port service.

7.  Click **Launch Remote Desktop** to download an `.rdp` file and launch the desktop viewer.

8.  Optional: To switch to the vGPU display of a Windows VM, select **Ctl + Alt + 2** from the **Send key** list.

    - Select **Ctl + Alt + 1** from the **Send key** list to restore the default display.

9.  To end the console session, click outside the console pane and then click **Disconnect**.

</div>
